# keystone-extensions

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
cc/keystone/: __init__.py
cc/keystone/auth/plugins/: cc_external.py  cc_password.py  cc_radius.py  cc_x509.py
cc/keystone/cmd/: cli.py  manage.py
cc/keystone/identity/backends/: cc_ldap.py
cc/keystone/middleware/: __init__.py  lifesaver.py  lifesaver_utils.py  response.py  score.py
