[metadata]
name = keystone-extensions
summary = Converged Cloud Keystone Extensions
description-file =
    README.md
author = Rudolf Vriend
author-email = rudolf.vriend@sap.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    cc

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    keystone-manage-extension = cc.keystone.cmd.manage:main

keystone.identity =
    cc_ldap = cc.keystone.identity.backends.cc_ldap:Identity

keystone.auth.password =
    cc_password = cc.keystone.auth.plugins.cc_password:Password

keystone.auth.totp =
    cc_radius = cc.keystone.auth.plugins.cc_radius:Radius

keystone.auth.external =
    cc_external = cc.keystone.auth.plugins.cc_external:Domain
    cc_x509 = cc.keystone.auth.plugins.cc_x509:Certificate

paste.filter_factory =
    lifesaver = cc.keystone.middleware:LifesaverMiddleware.factory

lifesaver.middleware =
	lifesaver = cc.keystone.middleware:LifesaverMiddleware

[wheel]
universal = 1
